Release history for HTTP-Tiny-Mech

{{$NEXT}}

1.001001 2014-08-15T06:11:34Z
 [00 Trivial]
 - no code changes.
 - metdata updates
 - whitespace adjustments.
 - test tweaks.

 [Dependencies::Stats]
 - Dependencies changed since 1.001000, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑1)
 - test: +1 -3 (recommends: ↑1 -1)

 [Metadata]
 - 1x Contributor is now recognised as contributor instead of an author

 [Misc]
 - POD moved around so generated source has less whitespace at the top.

 [Tests]
 - Test::ReportPrereqs was updated automatically, and is now more useful.

1.001000 2014-07-17T15:22:19Z
 [00 Major]
 - Recoded construction to work without Class::Tiny, as the logic is much more difficult since 1.000
 - Test Coverage increased to 100%
 - Misc packaging cleanups

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - develop: +3 -3 (suggests: +2 -1)
 - runtime: -1
 - test: +1

1.000000 2014-05-10T02:41:46Z
 [00 Minor]
 - Mostly a packaging changes, not interesting code changes, but downstream vendors who package by hand may need to pay
   attention.

 [01 Tooling]
 - Now uses ExtUtils::MakeMaker instead of Module::Build
 - Now defaults to Minimum requirements and "latest" are only recommended ( Previously it required very recent versions
   of toolchain things needlessly )

 [02 Version Scheme]
 - Moved from x.y.z to x.yyyzzz
 - This is the primary reason for the 1.x on the box.

 [Dependencies::Aggregate]
 - 5.008009 : 64 → 61
 - 5.010001 : 48 → 45
 - 5.018002 : ? → 25
 - 5.019000 : 29 → ?
 - 5.019009 : ? → 28

 [Dependencies::Stats]
 - Dependencies changed since 0.2.1, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +7 ↑1 -9
 - test: +4 ↓1 (recommends: +4)

0.2.1 2013-11-24T00:55:35Z
 [Dependencies::Noteworthy]
 - Needs HTTP::Tiny 0.022 for tests.

 [Dependencies::Stats]
 - Dependencies changed since 0.2.0, see misc/*.deps* for details
 - runtime: ↑1