@@ -1,5 +1,8 @@
 ; This file is generated from dist.ini.meta by dzil bakeini.
 ; Edit that file or the bundles contained within for long-term changes.
+; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.0.22 at Mon Oct 17 16:27:42 2011
+; Uncomment this to bootstrap via self
+; [Bootstrap::lib]
 name = HTTP-Tiny-Mech
 author = Kent Fredric <kentnl@cpan.org>
 license = Perl_5
@@ -14,9 +17,11 @@ issues = 1
 :version = 1.14000001
 
 [MetaData::BuiltWith / @Author::KENTNL/MetaData::BuiltWith]
+:version = 1.004000
 show_config = 1
 show_uname = 1
 uname_args = -s -o -r -m -i
+use_external_file = only
 
 [Git::Contributors / @Author::KENTNL/Git::Contributors]
 :version = 0.006
@@ -35,9 +40,12 @@ include_dotfiles = 1
 
 [MetaJSON / @Author::KENTNL/MetaJSON]
 
-[MetaYAML / @Author::KENTNL/MetaYAML]
+[MetaYAML::Minimal / @Author::KENTNL/MetaYAML::Minimal]
 
 [Manifest / @Author::KENTNL/Manifest]
+
+[Author::KENTNL::TravisCI / @Author::KENTNL/Author::KENTNL::TravisCI]
+:version = 0.001002
 
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
@@ -52,12 +60,14 @@ copy = LICENSE
 
 [Test::Kwalitee / @Author::KENTNL/Test::Kwalitee]
 
-[EOLTests / @Author::KENTNL/EOLTests]
+[Test::EOL / @Author::KENTNL/Test::EOL]
 trailing_whitespace = 1
 
 [Test::MinimumVersion / @Author::KENTNL/Test::MinimumVersion]
 
 [Test::Compile::PerFile / @Author::KENTNL/Test::Compile::PerFile]
+:version = 0.003902
+test_template = 02-raw-require.t.tpl
 
 [Test::Perl::Critic / @Author::KENTNL/Test::Perl::Critic]
 
@@ -76,7 +86,9 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.017001
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.025021
+
+[Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -89,7 +101,10 @@ locate_comment = 1
 [MakeMaker / @Author::KENTNL/MakeMaker]
 default_jobs = 10
 
-[ReadmeFromPod / @Author::KENTNL/ReadmeFromPod]
+[Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
+:version = 0.004002
+
+[Readme::Brief / @Author::KENTNL/ShippedReadme]
 
 [ReadmeAnyFromPod / @Author::KENTNL/ReadmeAnyFromPod]
 filename = README.mkdn
@@ -114,7 +129,9 @@ filename = Changes
 tag_format = %v-source
 
 [Git::NextRelease / @Author::KENTNL/Git::NextRelease]
-format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ
+:version = 0.004000
+default_branch = master
+format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ %h
 time_zone = UTC
 
 [BumpVersionAfterRelease / @Author::KENTNL/BumpVersionAfterRelease]
@@ -123,6 +140,7 @@ time_zone = UTC
 allow_dirty_match = ^lib/
 
 [Git::CommitBuild / @Author::KENTNL/Git::CommitBuild]
+branch = builds
 release_branch = releases
 
 [Git::Tag / @Author::KENTNL/tag_release]
@@ -136,9 +154,16 @@ hash_tags = #perl #cpan
 tweet_url = https://metacpan.org/release/{{$AUTHOR_UC}}/{{$DIST}}-{{$VERSION}}{{$TRIAL}}#whatsnew
 url_shortener = none
 
-[Prereqs::Recommend::MatchInstalled / @Author::KENTNL/Prereqs::Recommend::MatchInstalled]
-modules = ExtUtils::MakeMaker
-modules = Test::More
+[Prereqs::Upgrade / @Author::KENTNL/Prereqs::Upgrade]
+Dist::Zila::Plugin::MetaProvides::Package = 2.000000
+Dist::Zilla = 5
+ExtUtils::MakeMaker = 7.00
+File::ShareDir::Install = 0.10
+Moo = 1.000008
+Moose = 2.000
+Path::Tiny = 0.058
+Test::File::ShareDir = 1.000000
+Test::More = 0.99
 
 [Prereqs::Recommend::MatchInstalled / @Author::KENTNL/always_latest_develop_bundle]
 applyto_map = develop.suggests = develop.suggests
@@ -146,21 +171,33 @@ applyto_phase = develop
 modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
 
+[RemovePrereqs::Provided / @Author::KENTNL/RemovePrereqs::Provided]
+
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
+; version_major     = 0
+; version_minor     = 1
+; the following data denotes when this minor was minted
+; version_rel_year  = 2011
+; version_rel_month = 10
+; version_rel_day   = 17
+; version_rel_hour  = 16
+; version_rel_time_zone = Pacific/Auckland
+; auto_prereqs_skip = File::Find
 -phase = develop
 -relationship = requires
+Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.004002
+Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0
-Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::Git::Check = 0
 Dist::Zilla::Plugin::Git::Commit = 0
 Dist::Zilla::Plugin::Git::CommitBuild = 0
 Dist::Zilla::Plugin::Git::Contributors = 0.006
 Dist::Zilla::Plugin::Git::GatherDir = 0
-Dist::Zilla::Plugin::Git::NextRelease = 0
+Dist::Zilla::Plugin::Git::NextRelease = 0.004000
 Dist::Zilla::Plugin::Git::Tag = 0
 Dist::Zilla::Plugin::GithubMeta = 0
 Dist::Zilla::Plugin::License = 0
@@ -168,23 +205,27 @@ Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::Manifest = 0
 Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::MetaConfig = 0
-Dist::Zilla::Plugin::MetaData::BuiltWith = 0
+Dist::Zilla::Plugin::MetaData::BuiltWith = 1.004000
 Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
-Dist::Zilla::Plugin::MetaYAML = 0
+Dist::Zilla::Plugin::MetaYAML::Minimal = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
 Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::Prereqs = 0
+Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
+Dist::Zilla::Plugin::Prereqs::Upgrade = 0
+Dist::Zilla::Plugin::Readme::Brief = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
-Dist::Zilla::Plugin::ReadmeFromPod = 0
+Dist::Zilla::Plugin::RemovePrereqs::Provided = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
-Dist::Zilla::Plugin::Test::Compile::PerFile = 0
+Dist::Zilla::Plugin::Test::Compile::PerFile = 0.003902
+Dist::Zilla::Plugin::Test::EOL = 0
 Dist::Zilla::Plugin::Test::Kwalitee = 0
 Dist::Zilla::Plugin::Test::MinimumVersion = 0
 Dist::Zilla::Plugin::Test::Perl::Critic = 0
