@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.0.22 at Mon Oct 17 16:27:42 2011
+; vim: syntax=dosini
 name             = HTTP-Tiny-Mech
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
@@ -9,12 +10,11 @@ copyright_holder = Kent Fredric <kentnl@cpan.org>
 
 [@Author::KENTNL]
 :version          = 2.013
-git_versions      = 1
 toolkit           = eumm
 toolkit_hardness  = soft
 normal_form       = numify
 mantissa          = 6
-twitter_hash_tags = #perl #cpan
+# twitter_extra_hash_tags =
 copyfiles         = LICENSE
 srcreadme         = mkdn
 bumpversions      = 1
