@@ -1,6 +1,14 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.001002
+ [Added / configure requires]
+ - perl 5.006
+
+ [Added / test requires]
+ - perl 5.006
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 1.001001 2014-08-15T06:11:34Z
  [Added / test requires]
@@ -86,4 +94,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 0.1.2 2011-10-17T09:42:07Z
 
 0.1.1 2011-10-17T03:48:43Z
-
