@@ -1,6 +1,13 @@
 Release history for HTTP-Tiny-Mech
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.001001, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +14 ↑4 -3 (recommends: +1, suggests: ↑2)
+ - test: +1 ↓1 (recommends: ↑1 ↓1)
 
 1.001001 2014-08-15T06:11:34Z
  [00 Trivial]
@@ -160,4 +167,3 @@ Release history for HTTP-Tiny-Mech
 
 0.1.0 2011-10-17T03:44:31Z
  - First version.
-
